--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,71 @@
 /bucket/mediathekview.json
+/scripts/get-irfanview_reg_classes.ps1
+/scripts/irfanview.reg
+/scripts/IrfanView.aif.reg
+/scripts/IrfanView.ani.reg
+/scripts/IrfanView.asf.reg
+/scripts/IrfanView.au.reg
+/scripts/IrfanView.avi.reg
+/scripts/IrfanView.b3d.reg
+/scripts/IrfanView.bmp.reg
+/scripts/IrfanView.clp.reg
+/scripts/IrfanView.cr2.reg
+/scripts/IrfanView.cr3.reg
+/scripts/IrfanView.crw.reg
+/scripts/IrfanView.cur.reg
+/scripts/IrfanView.dcm.reg
+/scripts/IrfanView.dcx.reg
+/scripts/IrfanView.dds.reg
+/scripts/IrfanView.djvu.reg
+/scripts/IrfanView.dxf.reg
+/scripts/IrfanView.ecw.reg
+/scripts/IrfanView.emf.reg
+/scripts/IrfanView.eps.reg
+/scripts/IrfanView.exr.reg
+/scripts/IrfanView.flv.reg
+/scripts/IrfanView.g3.reg
+/scripts/IrfanView.gif.reg
+/scripts/IrfanView.hdp.reg
+/scripts/IrfanView.heic.reg
+/scripts/IrfanView.ico.reg
+/scripts/IrfanView.iff.reg
+/scripts/IrfanView.jls.reg
+/scripts/IrfanView.jng.reg
+/scripts/IrfanView.jp2.reg
+/scripts/IrfanView.jpg.reg
+/scripts/IrfanView.jpm.reg
+/scripts/IrfanView.jxl.reg
+/scripts/IrfanView.mid.reg
+/scripts/IrfanView.mng.reg
+/scripts/IrfanView.mov.reg
+/scripts/IrfanView.mp3.reg
+/scripts/IrfanView.mpe.reg
+/scripts/IrfanView.mpg.reg
+/scripts/IrfanView.ogg.reg
+/scripts/IrfanView.pbm.reg
+/scripts/IrfanView.pcd.reg
+/scripts/IrfanView.pcx.reg
+/scripts/IrfanView.pgm.reg
+/scripts/IrfanView.png.reg
+/scripts/IrfanView.ppm.reg
+/scripts/IrfanView.psd.reg
+/scripts/IrfanView.psp.reg
+/scripts/IrfanView.ras.reg
+/scripts/IrfanView.raw.reg
+/scripts/IrfanView.rle.reg
+/scripts/IrfanView.rmi.reg
+/scripts/IrfanView.sff.reg
+/scripts/IrfanView.sgi.reg
+/scripts/IrfanView.sid.reg
+/scripts/IrfanView.swf.reg
+/scripts/IrfanView.tga.reg
+/scripts/IrfanView.tif.reg
+/scripts/IrfanView.ttf.reg
+/scripts/IrfanView.wav.reg
+/scripts/IrfanView.wbmp.reg
+/scripts/IrfanView.webp.reg
+/scripts/IrfanView.wma.reg
+/scripts/IrfanView.wmf.reg
+/scripts/IrfanView.wmv.reg
+/scripts/IrfanView.xbm.reg
+/scripts/IrfanView.xpm.reg
